crates/stc_ts_file_analyzer/tests/pass/types/intersection/intersectionWithUnionConstraint/8.ts
// @strict: true

function f4<T extends string | number>(x: T & (number | object)) {
    const y: number = x;
}

